add tmp dir for hadoop

--- a/conf/core.cfg
+++ b/conf/core.cfg
@@ -12,6 +12,7 @@ hadoop_version=hadoop-0.20.2-cdh3u3
 hadoop_tar_name=hadoop-0.20.2-cdh3u3.tar.gz
 hadoop_namenode_dir=/export/hadoop/nn
 hadoop_datanode_dir=/export/hadoop/dn
+hadoop_tmp_dir=/export/hadoop/tmp
 hadoop_log_dir=/export/hadoop/logs
 
 zookeeper_version=zookeeper-3.4.3
