--- a/conf/zookeeper/conf/zoo.cfg
+++ b/conf/zookeeper/conf/zoo.cfg
@@ -10,8 +10,13 @@ syncLimit=5
 # do not use /tmp for storage, /tmp here is just 
 # example sakes.
 dataDir=/export/zookeeper/data
+dataLogDir=/export/zookeeper/logs
 # the port at which the clients will connect
 clientPort=2181
+
+server.1=node128:2888:3888
+server.2=node129:2888:3888
+server.3=node130:2888:3888
 #
 # Be sure to read the maintenance section of the 
 # administrator guide before turning on autopurge.
@@ -23,4 +28,3 @@ clientPort=2181
 # Purge task interval in hours
 # Set to "0" to disable auto purge feature
 #autopurge.purgeInterval=1
-#test
